Issue #9422:  Fix memory leak when re-initializing a struct.Struct object.